--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@react-native-community/slider": "^5.0.1",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
+    "@rn-primitives/progress": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -38,7 +41,8 @@
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
