--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "web": "expo start -c --web",
-    "clean": "rm -rf .expo node_modules"
+    "clean": "rm -rf .expo node_modules",
+    "lint": "prettier --check .",
+    "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:eslint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:all": "npm run lint && npm run lint:eslint",
+    "format": "prettier --write . && npm run lint:eslint:fix"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -24,7 +29,7 @@
     "expo": "^54.0.8",
     "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.6",
+    "expo-router": "~6.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
@@ -47,6 +52,13 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/react": "~19.1.10",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
+    "eslint": "^9.36.0",
+    "eslint-config-universe": "^15.0.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.9.2"
