Fix some build issues

--- a/app.json
+++ b/app.json
@@ -16,7 +16,10 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nathanjgaul.macromanager"
+      "bundleIdentifier": "com.nathanjgaul.macromanager",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "edgeToEdgeEnabled": true,
