--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.11",
     "lucide-react-native": "^0.511.0",
     "nativewind": "4.1.23",
     "react": "19.1.0",
@@ -42,6 +43,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^2.2.1",
