Attempt to fix the entrypoint error during ios build

--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "entryPoint": "./index.js",
     "name": "macro_manager",
     "slug": "macro_manager",
     "version": "1.0.0",
