--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -122,26 +122,26 @@ jobs:
 
       # Ensure Expo apps use the correct entry point for bundling.
       # Safely sets package.json "main" to expo/AppEntry.js (backs up original).
-      - name: 📋 Fix package.json main entry
-        run: |
-          # Check if jq is installed, if not install it
-          if ! command -v jq &> /dev/null; then
-            echo "Installing jq..."
-            sudo apt-get update && sudo apt-get install -y jq
-          fi
+      # - name: 📋 Fix package.json main entry
+      #   run: |
+      #     # Check if jq is installed, if not install it
+      #     if ! command -v jq &> /dev/null; then
+      #       echo "Installing jq..."
+      #       sudo apt-get update && sudo apt-get install -y jq
+      #     fi
 
-          # Fix the main entry in package.json
-          if [ -f ./package.json ]; then
-            # Create a backup
-            cp package.json package.json.bak
-            # Update the package.json
-            jq '.main = "node_modules/expo/AppEntry.js"' package.json > package.json.tmp && mv package.json.tmp package.json
-            echo "Updated package.json main entry"
-            cat package.json | grep "main"
-          else
-            echo "package.json not found"
-            exit 1
-          fi
+      #     # Fix the main entry in package.json
+      #     if [ -f ./package.json ]; then
+      #       # Create a backup
+      #       cp package.json package.json.bak
+      #       # Update the package.json
+      #       jq '.main = "node_modules/expo/AppEntry.js"' package.json > package.json.tmp && mv package.json.tmp package.json
+      #       echo "Updated package.json main entry"
+      #       cat package.json | grep "main"
+      #     else
+      #       echo "package.json not found"
+      #       exit 1
+      #     fi
 
       # Configure Metro bundler for SVG support via react-native-svg-transformer.
       # Note: This overwrites metro.config.js (after backing up). Merge manually if you have custom settings.
