Add ascAppId to eas.json for ios store submition

--- a/eas.json
+++ b/eas.json
@@ -27,5 +27,12 @@
         "autoIncrement": true
       }
     }
+  },
+  "submit": {
+    "production": {
+      "ios": {
+        "ascAppId": "6753035606"
+      }
+    }
   }
 }
