Change macro_manager to macromanager in app.json to fix invalid URL scheme

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": ["macro_manager"],
+    "scheme": ["macromanager"],
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
